# ModernExcelReports

./: LICENSE  README.md  main.ipynb  main.py  pyproject.toml  requirements.txt
static/: tennis_grandslam_wins.csv
